--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,10 +28,12 @@
 			},
 			{
 				"name": "Gen DFU",
+				"singleInstance": true,
 				"command": "cd ${workspaceFolder}/firmware/sparkfun_nrf52840_mini/s140/armgcc; adafruit-nrfutil dfu genpkg --sd-req 0xFFFE --dev-type 0x0052 --application _build/nrf52840_xxaa.hex  _build/dfu-package.zip",
 			},
 			{
 				"name": "Flash",
+				"singleInstance": true,
 				"command": "cd ${workspaceFolder}/firmware/sparkfun_nrf52840_mini/s140/armgcc; adafruit-nrfutil dfu genpkg --sd-req 0xFFFE --dev-type 0x0052 --application _build/nrf52840_xxaa.hex  _build/dfu-package.zip; adafruit-nrfutil --verbose dfu serial --package _build/dfu-package.zip -p COM11 -b 115200 --singlebank --touch 1200",
 			},
 			{
